Fixing comment overflow and comment sccroll to bottom on open now.

--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,9 +1,27 @@
+/*-------- picture.blade.php ---------*/
 a.userNameFont {
     opacity: 0.6;
     color: black;
     text-decoration: underline;
 }
 
+div.storySample {
+    color: black;
+    text-decoration: none
+    margin-right: 5%;
+    padding: 10px;
+    padding-top: 0px;
+    max-height: 80px;
+    height: auto;
+    max-width: 200px;
+	word-wrap: break-word;
+	overflow: hidden;
+
+div.storySample:hover {
+	underline: none;
+}
+
+/*-------- Favorites.blade.php -------*/
 b.favoritePageHeader {
     opacity: 0.8;
     font-size: 120%;
