--- a/public/css/thumbnailStory.css
+++ b/public/css/thumbnailStory.css
@@ -10,8 +10,10 @@
 .thumbnailStory:hover {
     opacity: 0.8;
 }
+
 .fill-div { 
     background-color: white;
+    text-decoration: none
     display: block;
     width: 100%;
     height: 100%;
@@ -39,3 +41,14 @@
     animation: none;
 }
 
+.title {
+    color: blue;
+    opacity: 0.8;
+    margin-right: 5%;
+    max-height: 25px;
+    height: auto;
+    max-width: 200px;
+    word-wrap: break-word;
+    overflow: hidden;
+
+}
